--- a/theme/base/css/display.css
+++ b/theme/base/css/display.css
@@ -1006,6 +1006,16 @@ float:left;
 #shownotice .vcard .photo {
 margin-bottom:4px;
 }
+#content .notice .author .photo {
+position:absolute;
+top:11px;
+left:0;
+float:none;
+}
+#content .notice .entry-title {
+margin-left:59px;
+}
+
 .vcard .url {
 text-decoration:none;
 }
@@ -1014,12 +1024,18 @@ text-decoration:underline;
 }
 
 .notice .entry-title {
-float:left;
-width:100%;
 overflow:hidden;
 }
 .notice .entry-title.ov {
 overflow:visible;
+}
+#showstream .notice .entry-title,
+#showstream .notice div.entry-content {
+margin-left:0;
+}
+#shownotice .notice .entry-title,
+#shownotice .notice div.entry-content {
+margin-left:110px;
 }
 #shownotice .notice .entry-title {
 font-size:2.2em;
@@ -1050,7 +1066,6 @@ max-width:70%;
 }
 #showstream .notice div.entry-content,
 #shownotice .notice div.entry-content {
-margin-left:0;
 max-width:79%;
 }
 
@@ -1114,6 +1129,7 @@ position:relative;
 font-size:0.95em;
 width:113px;
 float:right;
+margin-top:3px;
 margin-right:4px;
 }
 
